2006-09-07  Grahame Bowland  <grahame@angrygoats.net>

	* monotone.texi: add *-merge documentation sourced 
	from mailing list archives (new entry under "Special 
	"Topics").

2006-09-07  Richard Levitte  <richard@levitte.org>

	* revision.cc: It's really rosters, not revisions that are
	regenerated.
	* po/sv.po: Clear the resulting fuzzy.

2006-09-07  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 3 fuzzies.

2006-09-07  Grahame Bowland  <grahame@angrygoats.net>

	* automate.cc (get_content_changed, get_corresponding_path)
	add new functions, allowing determinination of last content 
	change and also filenames between revisions.
	* monotone.texi: document new automate commands
	* monotone.texi: document new automate commands
	  tests/automate_get_content_changed,
	  tests/automate_get_corresponding_path,
	  tests/automate_get_content_changed/__driver__.lua,
	  tests/automate_get_content_changed/expected,
	  tests/automate_get_corresponding_path/__driver__.lua,
	  tests/automate_get_corresponding_path/expected,
	  tests/automate_get_corresponding_path/expected2A:
	  test new automate commands
	* testsuite.lua: call automate_get_content_changed, 
	  automate_get_corresponding_path tests.

2006-09-07  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (cpp_main): Send usage text to stderr if there was
	an error, but stdout if it was requested with --help.
	* tests/usage_output_streams: New test.

2006-09-07  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 5 fuzzies, 4 new strings.

2006-09-05  Zack Weinberg  <zackw@panix.com>

	* revision.hh (enum made_for): New.
	(revision_t): Add 'made_for' field; in default constructor,
	initialize it to made_for_nobody.
	(make_revision_for_workspace): Two new functions.
	* revision.cc: Throughout, set made_for when appropriate.
	Implement new functions.
	* work.cc (get_work_rev): Set made_for.
	(put_work_rev): Invariant failure if made_for is not
	made_for_workspace.